--- a/config/assets.yml
+++ b/config/assets.yml
@@ -228,6 +228,8 @@ stylesheets:
     - public/stylesheets/compiled/slideshow.css
   alerts:
     - public/stylesheets/compiled/alerts.css
+  edit_calendar_event_full:
+    - public/stylesheets/compiled/calendar/editCalendarEventFull.css
   tinymce:
     - public/javascripts/tinymce/jscripts/tiny_mce/themes/advanced/skins/default/ui.css
     - public/stylesheets/compiled/tiny_like_ck_with_external_tools.css
