fixes for ruby 1.9.3
 * gemfile tweaks
 * removed ruby-debug (since it's broken in 1.9.3)
 * removed colons from case statements
 * turned off whiny nils for tests (they cause a 2X perf hit)
 * added utf-8 encoding markers to files with multibyte chars
 * removed an instance of calling String#map, which no longer works
 * fixed an issue in the assets file where the yaml emitter doesn't output the
   same whitespace as it did in 1.8.7
 * fix call to .map without block
 * fix yaml engine initialization for delayed jobs (was happening too late)
 * fix rspec instafail
 * fix UserProfile#id calls
 * fix ModelCache for instance_methods now returning symbols
 * fix user_spec collection not seeing the new objects
 * fix course specs where POST lines are slightly different in 1.9
 * fix utc_datetime in the time initializer

Change-Id: Ic95dda23cb910579e2828fb448323d4fc18902a2
Reviewed-on: https://gerrit.instructure.com/10705
Reviewed-by: Brian Palmer <brianp@instructure.com>
Tested-by: Zach Wily <zach@instructure.com>

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -61,7 +61,7 @@ css_compressor_options:
     end
     plugin_assets[plugin] = assets
   end
-  subdoc = YAML.dump('plugins' => plugin_assets).gsub(/^--- \n/, '')
+  subdoc = YAML.dump('plugins' => plugin_assets).gsub(/^---\s?\n/, '')
 
   # add anchors to the various bundles in the imported plugin asset definitions.
   # these bundles will be included in the known bundle types below with a
