--- a/config/assets.yml
+++ b/config/assets.yml
@@ -150,7 +150,9 @@ stylesheets:
   dashboard:
     - public/stylesheets/compiled/dashboard.css
   profile:
-    - public/stylesheets/compiled/profile.css
+    - public/stylesheets/compiled/profile/show.css
+  profile_edit:
+    - public/stylesheets/compiled/profile/edit.css
   facebook:
     - public/stylesheets/compiled/facebook.css
   speed_grader:
