make a popup base style
Change-Id: I79fe9d6dd7b34df8798d6ab8119d8512c08f760a

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -219,6 +219,8 @@ stylesheets:
     - public/stylesheets/compiled/context_list.css
   prior_users:
     - public/stylesheets/compiled/prior_users.css
+  popup:
+    - public/stylesheets/compiled/popup/main.css
   reports:
     - public/stylesheets/compiled/reports.css
   statistics:
