--- a/config/assets.yml
+++ b/config/assets.yml
@@ -151,10 +151,14 @@ stylesheets:
     - public/stylesheets/compiled/collection_item_save.css
   dashboard:
     - public/stylesheets/compiled/dashboard.css
+    - public/stylesheets/compiled/activity_feed.css
   profile:
     - public/stylesheets/compiled/profile/show.css
   profile_edit:
     - public/stylesheets/compiled/profile/edit.css
+  group_dashboard:
+    - public/stylesheets/compiled/activity_feed.css
+    - public/stylesheets/compiled/groups/dashboard.css
   facebook:
     - public/stylesheets/compiled/facebook.css
   speed_grader:
