add g_util_fancy_links.css back into the common bundle
it got removed by mistake, which resulted in losing a bunch of icons that came
in as background images.

test plan:
- make sure the check icons next to the to do and coming up sections are there

Change-Id: I5612e4d476c99cf81ce872660ad8b6abbecec429
Reviewed-on: https://gerrit.instructure.com/11029
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -125,6 +125,7 @@ stylesheets:
     - public/stylesheets/compiled/g_instructure.css
     - public/stylesheets/compiled/ellipsis.css
     - public/stylesheets/compiled/g_util_misc.css
+    - public/stylesheets/compiled/g_util_fancy_links.css
     - public/stylesheets/compiled/g_bootstrap_parts.css
     - public/stylesheets/compiled/g_util_buttons.css
     - public/stylesheets/compiled/g_util_inst_tree.css
