--- a/config/assets.yml
+++ b/config/assets.yml
@@ -150,6 +150,9 @@ stylesheets:
     - public/stylesheets/compiled/print.css
   collection_item_save:
     - public/stylesheets/compiled/collection_item_save.css
+  collections_app:
+    - public/stylesheets/compiled/views/KollectionItems/ShowView.css
+    - public/stylesheets/compiled/views/CommentsView.css
   dashboard:
     - public/stylesheets/compiled/dashboard.css
     - public/stylesheets/compiled/quick_start_bar.css
