registration page and signup flows, closes #8676, #8806
test plan:
1. sign up as a teacher
2. sign up as a student with a course code
   1. confirm that you are auto-logged in as soon as you submit valid info
      in the form
3. sign up as a student without a course code
4. sign up as an observer
   1. confirm that you are auto-enrolled in the child's courses
5. test the log in form

Change-Id: I581de48095e85ca869b9ded101fe143ffadb9c9a
Reviewed-on: https://gerrit.instructure.com/11111
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -154,6 +154,8 @@ stylesheets:
     - public/stylesheets/compiled/dashboard.css
     - public/stylesheets/compiled/quick_start_bar.css
     - public/stylesheets/compiled/activity_feed.css
+  registration:
+    - public/stylesheets/compiled/registration.css
   profile:
     - public/stylesheets/compiled/profile/show.css
   profile_edit:
