group settings page
Change-Id: I86cc94a030d12d25e9efebf718faa4fccfd9bddb

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -162,6 +162,8 @@ stylesheets:
     - public/stylesheets/compiled/quick_start_bar.css
     - public/stylesheets/compiled/activity_feed.css
     - public/stylesheets/compiled/groups/dashboard.css
+  group_settings:
+    - public/stylesheets/compiled/groups/edit.css
   facebook:
     - public/stylesheets/compiled/facebook.css
   speed_grader:
