group profile page
closes #8827

Change-Id: Ifd02bfe30828b4f3d5e6da1d1c00976fa65be6ac

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -169,6 +169,8 @@ stylesheets:
     - public/stylesheets/compiled/groups/dashboard.css
   group_settings:
     - public/stylesheets/compiled/groups/edit.css
+  group_profile:
+    - public/stylesheets/compiled/groups/profile.css
   facebook:
     - public/stylesheets/compiled/facebook.css
   speed_grader:
