fix popup styles
Change-Id: I4a895da0fac38c616d1d59967148336fb828783f

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -228,6 +228,7 @@ stylesheets:
   prior_users:
     - public/stylesheets/compiled/prior_users.css
   popup:
+    - public/stylesheets/compiled/g_reset.css
     - public/stylesheets/compiled/popup/main.css
   reports:
     - public/stylesheets/compiled/reports.css
