fix user and group profile styles that got ruined
Change-Id: Ieaee3f77c197e6875ba23c8cb0c31d7098fcbc00

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -145,7 +145,7 @@ stylesheets:
     - public/stylesheets/compiled/activity_feed.css
   registration:
     - public/stylesheets/compiled/registration.css
-  profile:
+  profile_show:
     - public/stylesheets/compiled/profile/show.css
   profile_edit:
     - public/stylesheets/compiled/profile/edit.css
