Rewrite of the Notification Preferences page. Closes #8066, Closes #9400
Implementing the re-designed Notification Preferences page.

Testing plan:
=========
* Verify that expected preferences can be set.
* Verify that it supports accessibility (screen readers) for blind users
* Verify that mobile users (iPad at least) can smoothly interact.

Change-Id: I2b98f2477932d800d2ec3de580e47a95f827616b
Reviewed-on: https://gerrit.instructure.com/12356
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -252,6 +252,8 @@ stylesheets:
     - public/stylesheets/compiled/developer_keys.css
   edit_calendar_event_full:
     - public/stylesheets/compiled/calendar/editCalendarEventFull.css
+  notification_preferences:
+    - public/stylesheets/compiled/notification_preferences.css
   tinymce:
     - public/javascripts/tinymce/jscripts/tiny_mce/themes/advanced/skins/default/ui.css
     - public/stylesheets/compiled/tiny_like_ck_with_external_tools.css
